# cmakechange

./: CMakeLists.txt  build_docthan.sh  config.conf  mindocthan.py  miner_docthan.sh  runmultidocthan.py
docthan/src/argon2-gpu-bench/: cpuexecutive.cpp  cudaexecutive.cpp  main.cpp  openclexecutive.cpp
